--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <script>
     // Fetch visitor count from the API Gateway endpoint
     async function getVisitorCount() {
-      const response = await fetch('https://bu7lwih0gf.execute-api.eu-west-2.amazonaws.com/prod/increment');
+      const response = await fetch('https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod/');
       const data = await response.json();
       document.getElementById('visitor-count').textContent = data.visitorCount;
     }
