--- a/index.html
+++ b/index.html
@@ -118,17 +118,19 @@
         </section>
 
     </div>
-<p>Visitor Count: <span id="visitor-count">Loading...</span></p>
-<script>
-    // Fetch visitor count from the API Gateway endpoint
-    async function getVisitorCount() {
-      const response = await fetch('https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod/');
-      const data = await response.json();
-      document.getElementById('visitor-count').textContent = data.visitorCount;
-    }
+  <h1>Visitor Count: <span id="visitorCount">Loading...</span></h1>
 
-    // Call the function when the page loads
-    window.onload = getVisitorCount;
+  <script>
+    // Make a request to the API Gateway endpoint
+    fetch('https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod/')  // Use your actual API Gateway URL here
+      .then(response => response.json())
+      .then(data => {
+        // Update the page with the visitor count
+        document.getElementById('visitorCount').innerText = data.visitorCount;
+      })
+      .catch(error => {
+        console.error('Error fetching visitor count:', error);
+        document.getElementById('visitorCount').innerText = 'Error loading count';
+      });
   </script>
-</body>
 </html>
