--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
   <script>
     // Make a request to the API Gateway endpoint
-    fetch('https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod/')  // Use your actual API Gateway URL here
+    fetch('arn:aws:execute-api:eu-west-2:324078474951:ztzgjulll8/*/GET/')  // Use your actual API Gateway URL here
       .then(response => response.json())
       .then(data => {
         // Update the page with the visitor count
