--- a/index.html
+++ b/index.html
@@ -118,19 +118,23 @@
         </section>
 
     </div>
-  <h1>Visitor Count: <span id="visitorCount">Loading...</span></h1>
+<h1>Visitor Count: <span id="visitorCount">Loading...</span></h1>
 
-  <script>
-    // Make a request to the API Gateway endpoint
-    fetch('arn:aws:execute-api:eu-west-2:324078474951:ztzgjulll8/*/GET/')  // Use your actual API Gateway URL here
-      .then(response => response.json())
-      .then(data => {
-        // Update the page with the visitor count
-        document.getElementById('visitorCount').innerText = data.visitorCount;
-      })
-      .catch(error => {
-        console.error('Error fetching visitor count:', error);
-        document.getElementById('visitorCount').innerText = 'Error loading count';
-      });
-  </script>
+<script>
+  // API Gateway URL (use the actual URL with resource path)
+  const apiUrl = 'https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod/visitor-count'; 
+
+  // Make a request to the API Gateway endpoint
+  fetch(apiUrl)
+    .then(response => response.json())
+    .then(data => {
+      // Update the page with the visitor count
+      document.getElementById('visitorCount').innerText = data.visitorCount;
+    })
+    .catch(error => {
+      console.error('Error fetching visitor count:', error);
+      document.getElementById('visitorCount').innerText = 'Error loading count';
+    });
+</script>
+
 </html>
