--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <script>
   // API Gateway URL (use the actual URL with resource path)
-  const apiUrl = 'https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod/visitor-count'; 
+  const apiUrl = 'https://ztzgjulll8.execute-api.eu-west-2.amazonaws.com/prod'; 
 
   // Make a request to the API Gateway endpoint
   fetch(apiUrl)
