--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Scott Evans - DevOps Engineer</h1>
-        <p>Your Next DevOps Engineer or Software Specialist</p>
+        <p>Your Next DevOps Engineer or Software Developer</p>
         <div class="header-details">
             <p>Email: <a href="mailto:Scottevans85@hotmail.com">Scottevans85@hotmail.com</a> | Phone: 07415 190859 | <a href="https://github.com/SEvans85">GitHub Profile</a></p>
         </div>
